Cross encoder ranking

--- a/ll_index.ipynb
+++ b/ll_index.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic_settings import BaseSettings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,83 +21,8 @@
     "from llama_index.text_splitter import TokenTextSplitter\n",
     "from llama_index.node_parser import SimpleNodeParser\n",
     "from llama_index import VectorStoreIndex, SimpleDirectoryReader\n",
-    "from llama_index import set_global_service_context"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "openai_api_key = os.environ[\"OPENAI_API_KEY\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index import SimpleDirectoryReader\n",
-    "\n",
-    "documents = SimpleDirectoryReader(\"./ML-DS-TEXTBOOKS\").load_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from llama_index import set_global_service_context\n",
     "import tiktoken"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.node_parser import TokenTextSplitter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_splitter = TokenTextSplitter(\n",
-    "  separator=\" \",\n",
-    "  chunk_size=1024,\n",
-    "  chunk_overlap=20,\n",
-    "  backup_separators=[\"\\n\"],\n",
-    "  tokenizer=tiktoken.encoding_for_model(\"gpt-3.5-turbo\").encode\n",
-    "\n",
-    ")\n",
-    "\n",
-    "nodes = text_splitter.get_nodes_from_documents(documents)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "510"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(nodes)"
    ]
   },
   {
@@ -97,17 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from llama_index.node_parser import TokenTextSplitter\n",
     "import together\n",
-    "\n",
-    "together.api_key = os.environ[\"TOGETHER_API_KEY\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import logging\n",
     "from typing import Any, Dict, List, Mapping, Optional\n",
     "\n",
@@ -121,9 +46,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.embeddings import TogetherEmbedding\n",
+    "#import chromadb\n",
+    "#from llama_index.vector_stores import ChromaVectorStore\n",
+    "from llama_index.storage.storage_context import StorageContext\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from llama_index.core import PromptTemplate\n",
+    "from IPython.display import Markdown, display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import PromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.indices.postprocessor import SentenceTransformerRerank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index import SimpleDirectoryReader\n",
+    "\n",
+    "documents = SimpleDirectoryReader(\"./ML-DS-TEXTBOOKS\").load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_splitter = TokenTextSplitter(\n",
+    "  separator=\" \",\n",
+    "  chunk_size=1024,\n",
+    "  chunk_overlap=20,\n",
+    "  backup_separators=[\"\\n\"],\n",
+    "  tokenizer=tiktoken.encoding_for_model(\"gpt-3.5-turbo\").encode\n",
+    "\n",
+    ")\n",
+    "\n",
+    "nodes = text_splitter.get_nodes_from_documents(documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "together.api_key = os.environ[\"TOGETHER_API_KEY\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\j\\AppData\\Local\\Temp\\ipykernel_15640\\630357882.py:17: PydanticDeprecatedSince20: `pydantic.config.Extra` is deprecated, use literal values instead (e.g. `extra='allow'`). Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.6/migration/\n",
+      "  extra = Extra.forbid\n"
+     ]
+    }
+   ],
    "source": [
     "class TogetherLLM(LLM):\n",
     "    \"\"\"Together large language models.\"\"\"\n",
@@ -175,11 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_llms = TogetherLLM(\n",
+    "together_llm = TogetherLLM(\n",
     "    model = \"togethercomputer/llama-2-70b-chat\",\n",
     "    temperature = 0.1,\n",
     "    max_tokens=512\n",
@@ -188,69 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.embeddings import TogetherEmbedding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embed_model = TogetherEmbedding(\n",
-    "    model_name=\"togethercomputer/m2-bert-80M-8k-retrieval\", api_key=together.api_key\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\j\\python\\lib\\site-packages\\InstructorEmbedding\\instructor.py:7: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from tqdm.autonotebook import trange\n"
-     ]
-    }
-   ],
-   "source": [
-    "from InstructorEmbedding import INSTRUCTOR\n",
-    "from langchain_community.embeddings import HuggingFaceInstructEmbeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "load INSTRUCTOR_Transformer\n",
-      "max_seq_length  512\n"
-     ]
-    }
-   ],
-   "source": [
-    "instructor_embedding = HuggingFaceInstructEmbeddings(model_name='hkunlp/instructor-xl',\n",
-    "                                                     model_kwargs={\"device\": \"cpu\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm = test_llms\n",
+    "llm = together_llm\n",
     "\n",
     "embed_model = \"local\"\n",
     "\n",
@@ -269,19 +223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "config.json: 100%|██████████| 684/684 [00:00<00:00, 34.7kB/s]\n",
-      "model.safetensors: 100%|██████████| 133M/133M [00:37<00:00, 3.55MB/s] \n",
-      "tokenizer_config.json: 100%|██████████| 366/366 [00:00<00:00, 85.5kB/s]\n",
-      "vocab.txt: 100%|██████████| 232k/232k [00:00<00:00, 543kB/s]\n",
-      "tokenizer.json: 100%|██████████| 711k/711k [00:00<00:00, 1.08MB/s]\n",
-      "special_tokens_map.json: 100%|██████████| 125/125 [00:00<00:00, 31.2kB/s]\n"
+      "c:\\Users\\j\\python\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -301,81 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import chromadb\n",
-    "from llama_index.vector_stores import ChromaVectorStore\n",
-    "from llama_index.storage.storage_context import StorageContext"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = chromadb.PersistentClient(path=\"./chroma_db\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chroma_collection = db.get_or_create_collection(\"forML\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# assign chroma as the vector_store to the context\n",
-    "vector_store = ChromaVectorStore(chroma_collection=chroma_collection)\n",
-    "storage_context = StorageContext.from_defaults(vector_store=vector_store)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = VectorStoreIndex.from_vector_store(\n",
-    "    vector_store, storage_context=storage_context\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Decision Trees are versatile Machine Learning algorithms that can perform both classification and regression tasks, and even multioutput tasks. They are very powerful algorithms, capable of fitting complex datasets. They are simple to understand and interpret, easy to use, versatile, and powerful. However, they do have a few limitations. First, they are sensitive to training set rotation. Second, they are very sensitive to small variations in the training data.\n"
-     ]
-    }
-   ],
-   "source": [
-    "query_engine = index.as_query_engine()\n",
-    "response = query_engine.query(\"What are decision trees?\")\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create your index\n",
     "index = VectorStoreIndex.from_documents(\n",
     "    documents, \n",
     "    service_context = service_context\n",
@@ -385,24 +264,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "config.json: 100%|██████████| 794/794 [00:00<00:00, 57.9kB/s]\n",
+      "pytorch_model.bin: 100%|██████████| 62.5M/62.5M [00:27<00:00, 2.29MB/s]\n",
+      "tokenizer_config.json: 100%|██████████| 316/316 [00:00<00:00, 18.5kB/s]\n",
+      "vocab.txt: 100%|██████████| 232k/232k [00:00<00:00, 890kB/s]\n",
+      "special_tokens_map.json: 100%|██████████| 112/112 [00:00<00:00, 4.26kB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the reranker\n",
+    "rerank = SentenceTransformerRerank(\n",
+    "    model=\"cross-encoder/ms-marco-MiniLM-L-2-v2\", top_n=3 # Note here\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#query_engine = index.as_query_engine(similarity_top_k=2, llm=llm)\n",
+    "query_engine = index.as_query_engine(similarity_top_k=5, node_postprocessors=[rerank], llm=llm)\n",
+    "vector_retriever = index.as_retriever(similarity_top_k=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = (\n",
+    "    \"We have provided context information below. \\n\"\n",
+    "    \"---------------------\\n\"\n",
+    "    \"{context_str}\"\n",
+    "    \"\\n---------------------\\n\"\n",
+    "    \"Given the context information and not prior knowledge, \"\n",
+    "    \"You are a helpful Machine Learning assistant. Given a query follow the following steps: think through the question carefully and in detail, split the question into sub-questions, solve the first sub-question, move on and solve the next sub-question, When you have solved all sub-questions combine the knowledge and information gotten, and solve the main question. Your response/answer should be conprehensive and not contradicted with the following context if they are relevant, otherwise ignore them if they are not relevant and . If you can not find any good answer \\n\"\n",
+    "    \"Query:  {query_str}\\n\"\n",
+    "    \"Answer: \"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qa_template = PromptTemplate(template)\n",
+    "query_engine.update_prompts(\n",
+    "    {\"response_synthesizer:text_qa_template\": qa_template}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_str = \"What  is  repeated  cross-validation  and  why  would  you  prefer  it  to  using  a  single validation set?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Repeated cross-validation is a technique used in machine learning to evaluate the performance of a model by training and testing it multiple times on different subsets of the data. In contrast to using a single validation set, repeated cross-validation provides a more robust estimate of a model's performance by averaging the performance over multiple iterations.\n",
+      "\n",
+      "The main advantage of repeated cross-validation is that it reduces the variance in the performance estimate compared to using a single validation set. With a single validation set, the performance of the model can be heavily influenced by the specific samples in the set, leading to a biased estimate of the model's true performance. Repeated cross-validation helps to mitigate this issue by averaging the performance over multiple iterations, providing a more reliable estimate of the model's performance.\n",
+      "\n",
+      "Another advantage of repeated cross-validation is that it allows for a more thorough exploration of the hyperparameter space. By training and testing the model multiple times on different subsets of the data, repeated cross-validation can help identify the hyperparameters that result in the best performance across multiple iterations.\n",
+      "\n",
+      "In summary, repeated cross-validation is a valuable technique for evaluating the performance of a machine learning model. It provides a more robust estimate of the model's performance by averaging the performance over multiple iterations, and allows for a more thorough exploration of the hyperparameter space.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = query_engine.query(query_str)\n",
+    "print(str(response))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from llama_index.ingestion import IngestionPipeline\n",
-    "from llama_index.node_parser import TokenTextSplitter\n",
-    "\n",
-    "pipeline = IngestionPipeline(transformations=[TokenTextSplitter(), ...])\n",
-    "\n",
-    "nodes = pipeline.run(documents=documents)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
